<resources>
    <string name="app_name">Kalkulator Kesehatan</string>
    <string name="menu">Menu A</string>
    <string name="gender_male">Laki-laki</string>
    <string name="gender_female">Perempuan</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="height_label">Tinggi Badan (cm)</string>
    <string name="weight_label">Berat Badan (kg)</string>
    <string name="water_age">Umur Anda (tahun)</string>
    <string name="water_weight">Berat Badan (kg)</string>
    <string name="app_about">Aplikasi ini adalah contoh sederhana implementasi OOP dalam JAVA, untuk memenuhi tugas matakuliah PBO. Kelompok 1 (Irhan H, Raka A, Nurul H, Iqbal A, Lusiana L)</string>
</resources>
