<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bodymess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.rakaadinugroho.kalkulatorkesehatan.activities.BodymessActivity">
    <TextView
        android:text="@string/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:id="@+id/bm_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >
        <RadioButton
            android:id="@+id/gender_male"
            android:checked="false"
            android:text="@string/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/gender_female"
            android:checked="false"
            android:text="@string/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </RadioGroup>

    <TextView
        android:text="@string/height_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/bm_height"
        android:inputType="number"
        android:hint="100cm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/weight_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/bm_weight"
        android:inputType="number"
        android:hint="40Kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/bm_result"
        android:text="Cek"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_gravity="center"

            android:id="@+id/bm_emoticon"
            android:layout_width="100px"
            android:layout_height="100px" />
        <TextView
            android:id="@+id/bm_ideal"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textAlignment="center"
            android:id="@+id/bm_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
